@@ -1,0 +1,42 @@
+# BEGIN PLOT /ATLAS_2014_I1300647/d..-x..-y..
+LeftMargin=1.5
+XLabel=$Z$ $p_{\text{T}}$ [GeV]
+YLabel=$\frac{1}{\sigma^{\text{fid}}}\frac{\text{d}\sigma^{\text{fid}}}{\text{d}p_{\text{T}}}$ $[GeV^{-1}]$
+YMin=0.0000001
+XMin=1
+LogX=1
+GofType=chi2
+GofLegend=0
+LegendYPos=0.55
+LegendXPos=0.1
+RatioPlotYMin=0.5
+RatioPlotYMax=1.4
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1300647/d01-x01-y01
+Title=$Z\rightarrow ee$ "dressed", Inclusive
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1300647/d01-x01-y02
+Title=$Z\rightarrow \mu \mu$ "dressed", Inclusive 
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1300647/d01-x02-y01
+Title=$Z\rightarrow ee$ "bare", Inclusive
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1300647/d01-x02-y02
+Title=$Z\rightarrow \mu \mu$ "bare", Inclusive 
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1300647/d03-x01-y02
+Title=$0.0<|y_Z|<1.0$, "dressed"
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1300647/d03-x01-y04
+Title=$1.0<|y_Z|<2.0$, "dressed"
+# END PLOT
+
+# BEGIN PLOT /ATLAS_2014_I1300647/d03-x01-y06
+Title=$2.0<|y_Z|<2.4$, "dressed"
+# END PLOT
