@@ -1,0 +1,229 @@
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1300647/d01-x01-y01
+Path=/REF/ATLAS_2014_I1300647/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	1.0	1.0	0.02737914     0.0002776655            0.0002776655
+3.0	1.0	1.0	0.057232       0.0005014581	       0.0005014581
+5.0	1.0	1.0	0.0574794      0.0003397125	       0.0003397125
+7.0	1.0	1.0	0.04908        0.0002706529	       0.0002706529
+9.0	1.0	1.0	0.04102518     0.0002583609	       0.0002583609
+11.0	1.0	1.0	0.03421572     0.0002366086	       0.0002366086
+13.0	1.0	1.0	0.0286004      0.0001873053	       0.0001873053
+15.0	1.0	1.0	0.02414358     0.0001594939	       0.0001594939
+17.0	1.0	1.0	0.02048238     0.0001420391	       0.0001420391
+20.0	2.0	2.0	0.01623568     9.9819728167125E-005    9.9819728167125E-005
+24.0	2.0	2.0	0.0121099      8.17844228079902E-005   8.17844228079902E-005
+28.0	2.0	2.0	0.009218984    6.71215479130919E-005   6.71215479130919E-005
+32.0	2.0	2.0	0.007257708    0.000058572	       0.000058572
+36.0	2.0	2.0	0.005806       5.10300830981099E-005   5.10300830981099E-005
+40.0	2.0	2.0	0.004661334    4.50343730401896E-005   4.50343730401896E-005
+44.0	2.0	2.0	0.00375248     3.87832922659452E-005   3.87832922659452E-005
+48.0	2.0	2.0	0.00319992     3.54570773954339E-005   3.54570773954339E-005
+52.0	2.0	2.0	0.002593584    3.24623069113345E-005   3.24623069113345E-005
+57.0	3.0	3.0	0.002084418    2.47273831743763E-005   2.47273831743763E-005
+65.0	5.0	5.0	0.001488992    1.60514442599536E-005   1.60514442599536E-005
+75.0	5.0	5.0	0.000971198    1.25641644735709E-005   1.25641644735709E-005
+90.0	10.0	10.0	0.0005548609   6.52569260155636E-006   6.52569260155636E-006
+125.0	25.0	25.0	0.000190272    2.63518133578527E-006   2.63518133578527E-006
+175.0	25.0	25.0	4.780146E-005  1.05916645230081E-006   1.05916645230081E-006
+250.0	50.0	50.0	1.079575E-005  4.2757984955552E-007    4.2757984955552E-007
+550.0	250.0	250.0	0.000000389    0.000000027	       0.000000027
+# END YODA_SCATTER2D 
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1300647/d01-x01-y02
+Path=/REF/ATLAS_2014_I1300647/d01-x01-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	1.0	1.0	0.02762264      0.0001957313           0.0001957313
+3.0	1.0	1.0	0.0571634	0.0003376514	       0.0003376514
+5.0	1.0	1.0	0.05742 	0.0003147643	       0.0003147643
+7.0	1.0	1.0	0.04929 	0.0002743023	       0.0002743023
+9.0	1.0	1.0	0.04110574	0.000254092	       0.000254092
+11.0	1.0	1.0	0.034155	0.0002181914	       0.0002181914
+13.0	1.0	1.0	0.02859024	0.0001888038	       0.0001888038
+15.0	1.0	1.0	0.02416392	0.0001620425	       0.0001620425
+17.0	1.0	1.0	0.02043176	0.0001441996	       0.0001441996
+20.0	2.0	2.0	0.01618488	0.0001080151	       0.0001080151
+24.0	2.0	2.0	0.0121301	0.00008845	       0.00008845
+28.0	2.0	2.0	0.009227032	7.17160637566531E-005  7.17160637566531E-005
+32.0	2.0	2.0	0.007277768	5.93082278269696E-005  5.93082278269696E-005
+36.0	2.0	2.0	0.0058		5.09773479106161E-005  5.09773479106161E-005
+40.0	2.0	2.0	0.004614381	4.41704977984847E-005  4.41704977984847E-005
+44.0	2.0	2.0	0.00378741	3.8631582E-005	       3.8631582E-005
+48.0	2.0	2.0	0.003121315	3.28168830660764E-005  3.28168830660764E-005
+52.0	2.0	2.0	0.002575656	2.89621035891332E-005  2.89621035891332E-005
+57.0	3.0	3.0	0.002100322	2.27785706637469E-005  2.27785706637469E-005
+65.0	5.0	5.0	0.001472128	1.58012215142476E-005  1.58012215142476E-005
+75.0	5.0	5.0	0.0009777254	1.21827880499018E-005  1.21827880499018E-005
+90.0	10.0	10.0	0.0005399959	6.60717587828844E-006  6.60717587828844E-006
+125.0	25.0	25.0	0.0001899747	2.5218738933017E-006   2.5218738933017E-006
+175.0	25.0	25.0	4.952108E-005	1.04840933326762E-006  1.04840933326762E-006
+250.0	50.0	50.0	1.06863E-005	3.76487008959014E-007  3.76487008959014E-007
+550.0	250.0	250.0	4.026765E-007	2.73214150617231E-008  2.73214150617231E-008
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1300647/d01-x02-y01
+Path=/REF/ATLAS_2014_I1300647/d01-x02-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	1.0	1.0	0.02574876     0.000261131            0.000261131
+3.0	1.0	1.0	0.054604       0.000478432	      0.000478432
+5.0	1.0	1.0	0.05626014     0.0003325065	      0.0003325065
+7.0	1.0	1.0	0.04917816     0.0002711943	      0.0002711943
+9.0	1.0	1.0	0.0417585      0.0002629791	      0.0002629791
+11.0	1.0	1.0	0.0351624      0.0002431551	      0.0002431551
+13.0	1.0	1.0	0.02969825     0.0001944952	      0.0001944952
+15.0	1.0	1.0	0.0251644      0.0001662375	      0.0001662375
+17.0	1.0	1.0	0.0213484      0.0001480447	      0.0001480447
+20.0	2.0	2.0	0.01681096     0.0001033566	      0.0001033566
+24.0	2.0	2.0	0.01238567     8.3646840357083E-005   8.3646840357083E-005
+28.0	2.0	2.0	0.009356444    6.81223662219352E-005  6.81223662219352E-005
+32.0	2.0	2.0	0.007286652    5.88055840686048E-005  5.88055840686048E-005
+36.0	2.0	2.0	0.005788582    0.000050877	      0.000050877
+40.0	2.0	2.0	0.004628672    4.47188168727408E-005  4.47188168727408E-005
+44.0	2.0	2.0	0.0037224      3.8472404151589E-005   3.8472404151589E-005
+48.0	2.0	2.0	0.003142032    3.48156428294864E-005  3.48156428294864E-005
+52.0	2.0	2.0	0.002557128    0.000032006	      0.000032006
+57.0	3.0	3.0	0.002038284    2.41800970276597E-005  2.41800970276597E-005
+65.0	5.0	5.0	0.001449966    1.56307410837855E-005  1.56307410837855E-005
+75.0	5.0	5.0	0.000941738    0.000012183	      0.000012183
+90.0	10.0	10.0	0.0005347045   6.28863414176218E-006  6.28863414176218E-006
+125.0	25.0	25.0	0.000183744    2.54477148168164E-006  2.54477148168164E-006
+175.0	25.0	25.0	4.582977E-005  1.01547850004293E-006  1.01547850004293E-006
+250.0	50.0	50.0	1.03075E-005   4.08242067414818E-007  4.08242067414818E-007
+550.0	250.0	250.0	3.71059E-007   2.57503717745124E-008  2.57503717745124E-008
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1300647/d01-x02-y02
+Path=/REF/ATLAS_2014_I1300647/d01-x02-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	1.0	1.0	 0.02702708       0.0001915112          0.0001915112
+3.0	1.0	1.0	 0.05623012	  0.0003321387		0.0003321387
+5.0	1.0	1.0	 0.056956	  0.0003122207		0.0003122207
+7.0	1.0	1.0	 0.04938858	  0.0002748509		0.0002748509
+9.0	1.0	1.0	 0.04139148	  0.0002558583		0.0002558583
+11.0	1.0	1.0	 0.03452625	  0.000220563		0.000220563
+13.0	1.0	1.0	 0.02901234	  0.0001915913		0.0001915913
+15.0	1.0	1.0	 0.02452032	  0.0001644325		0.0001644325
+17.0	1.0	1.0	 0.02075352	  0.0001464705		0.0001464705
+20.0	2.0	2.0	 0.01639197	  0.0001093972		0.0001093972
+24.0	2.0	2.0	 0.01222618	  8.91505682144198E-005 8.91505682144198E-005
+28.0	2.0	2.0	 0.00926372	  7.20012170916697E-005 7.20012170916697E-005
+32.0	2.0	2.0	 0.007299536	  5.94856203329326E-005 5.94856203329326E-005
+36.0	2.0	2.0	 0.0057942	  5.09263705627055E-005 5.09263705627055E-005
+40.0	2.0	2.0	 0.004605143	  4.40820683734627E-005 4.40820683734627E-005
+44.0	2.0	2.0	 0.00376464	  3.8399328E-005	3.8399328E-005
+48.0	2.0	2.0	 0.00310563	  0.000032652		0.000032652
+52.0	2.0	2.0	 0.002552382	  2.87003978338097E-005 2.87003978338097E-005
+57.0	3.0	3.0	 0.002083418	  2.25952421272178E-005 2.25952421272178E-005
+65.0	5.0	5.0	 0.001457288	  1.56419350070475E-005 1.56419350070475E-005
+75.0	5.0	5.0	 0.0009648736	  1.20226502898929E-005 1.20226502898929E-005
+90.0	10.0	10.0	 0.0005334571	  6.52716971225468E-006 6.52716971225468E-006
+125.0	25.0	25.0	 0.0001870992	  2.48370224002266E-006 2.48370224002266E-006
+175.0	25.0	25.0	 4.85745E-005	  1.02836931583092E-006 1.02836931583092E-006
+250.0	50.0	50.0	 1.046076E-005	  3.6854105198601E-007	3.6854105198601E-007
+550.0	250.0	250.0	 3.877026E-007	  2.63054428433475E-008 2.63054428433475E-008
+# END YODA_SCATTER2D 
+
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1300647/d03-x01-y02
+Path=/REF/ATLAS_2014_I1300647/d03-x01-y02
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	1.0	1.0			0.02792	1.7258535205514982E-4	1.7258535205514982E-4
+3.0	1.0	1.0			0.05763	2.964445971408486E-4	2.964445971408486E-4
+5.0	1.0	1.0			0.05784	2.7636385372910115E-4	2.7636385372910115E-4
+7.0	1.0	1.0			0.04974	2.393729425311056E-4	2.393729425311056E-4
+9.0	1.0	1.0			0.04134	2.073603850690869E-4	2.073603850690869E-4
+11.0	1.0	1.0			0.03424	1.831759998253046E-4	1.831759998253046E-4
+13.0	1.0	1.0			0.02859	1.5943892219279457E-4	1.5943892219279457E-4
+15.0	1.0	1.0			0.02412	1.390408692147744E-4	1.390408692147744E-4
+17.0	1.0	1.0			0.02028	1.2550682340016416E-4	1.2550682340016416E-4
+20.0	2.0	2.0			0.01609	8.972970472480115E-5	8.972970472480115E-5
+24.0	2.0	2.0			0.01199	7.339407978168265E-5	7.339407978168265E-5
+28.0	2.0	2.0			0.009113	5.977183285110136E-5	5.977183285110136E-5
+32.0	2.0	2.0			0.007165	5.1959837016199354E-5	5.1959837016199354E-5
+36.0	2.0	2.0			0.005707	4.450362364673241E-5	4.450362364673241E-5
+40.0	2.0	2.0			0.004554	3.948346889167668E-5	3.948346889167668E-5
+44.0	2.0	2.0			0.003747	3.507600303155991E-5	3.507600303155991E-5
+48.0	2.0	2.0			0.00314	3.138272524813611E-5	3.138272524813611E-5
+52.0	2.0	2.0			0.002575	2.7905207399336777E-5	2.7905207399336777E-5
+57.0	3.0	3.0			0.00204	2.0637299823378062E-5	2.0637299823378062E-5
+65.0	5.0	5.0			0.001457	1.3796182129125435E-5	1.3796182129125435E-5
+75.0	5.0	5.0			9.557E-4	1.1037404084122318E-5	1.1037404084122318E-5
+90.0	10.0	10.0			5.413E-4	5.906622343463309E-6	5.906622343463309E-6
+125.0	25.0	25.0			1.859E-4	2.123983770512383E-6	2.123983770512383E-6
+175.0	25.0	25.0			4.794E-5	9.091679125310132E-7	9.091679125310132E-7
+250.0	50.0	50.0			1.124E-5	3.495133982667904E-7	3.495133982667904E-7
+550.0	250.0	250.0			4.768E-7	2.6739256876914136E-8	2.6739256876914136E-8
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1300647/d03-x01-y04
+Path=/REF/ATLAS_2014_I1300647/d03-x01-y04
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	1.0	1.0			0.02704	1.993821862454116E-4	1.993821862454116E-4
+3.0	1.0	1.0			0.0568	3.3226786302620364E-4	3.3226786302620364E-4
+5.0	1.0	1.0			0.0572	3.067008314302392E-4	3.067008314302392E-4
+7.0	1.0	1.0			0.04872	2.649310995107973E-4	2.649310995107973E-4
+9.0	1.0	1.0			0.04074	2.2377351293662975E-4	2.2377351293662975E-4
+11.0	1.0	1.0			0.03423	1.9770603213862747E-4	1.9770603213862747E-4
+13.0	1.0	1.0			0.02876	1.7477468800715967E-4	1.7477468800715967E-4
+15.0	1.0	1.0			0.02427	1.4921609705390368E-4	1.4921609705390368E-4
+17.0	1.0	1.0			0.0207	1.3708964731153113E-4	1.3708964731153113E-4
+20.0	2.0	2.0			0.01634	1.003281322461452E-4	1.003281322461452E-4
+24.0	2.0	2.0			0.01228	8.508719753288387E-5	8.508719753288387E-5
+28.0	2.0	2.0			0.00934	6.995653765017248E-5	6.995653765017248E-5
+32.0	2.0	2.0			0.007363	6.0814992569102556E-5	6.0814992569102556E-5
+36.0	2.0	2.0			0.005883	5.2559921765352736E-5	5.2559921765352736E-5
+40.0	2.0	2.0			0.004704	4.536861073826264E-5	4.536861073826264E-5
+44.0	2.0	2.0			0.003739	3.995135059757054E-5	3.995135059757054E-5
+48.0	2.0	2.0			0.003134	3.519162445866914E-5	3.519162445866914E-5
+52.0	2.0	2.0			0.002556	3.191010148777343E-5	3.191010148777343E-5
+57.0	3.0	3.0			0.00211	2.4214490909370777E-5	2.4214490909370777E-5
+65.0	5.0	5.0			0.001481	1.7006368849933835E-5	1.7006368849933835E-5
+75.0	5.0	5.0			9.845E-4	1.3319888429056003E-5	1.3319888429056003E-5
+90.0	10.0	10.0			5.509E-4	7.154492296075243E-6	7.154492296075243E-6
+125.0	25.0	25.0			1.954E-4	2.7592943147841263E-6	2.7592943147841263E-6
+175.0	25.0	25.0			4.959E-5	1.1711117116018437E-6	1.1711117116018437E-6
+250.0	50.0	50.0			1.011E-5	4.004810789463093E-7	4.004810789463093E-7
+550.0	250.0	250.0			3.028E-7	2.6887923909383556E-8	2.6887923909383556E-8
+# END YODA_SCATTER2D 
+
+
+# BEGIN YODA_SCATTER2D /REF/ATLAS_2014_I1300647/d03-x01-y06
+Path=/REF/ATLAS_2014_I1300647/d03-x01-y06
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+1.0	1.0	1.0			0.0263	4.509510616463831E-4	4.509510616463831E-4
+3.0	1.0	1.0			0.0553	6.280872630455102E-4	6.280872630455102E-4
+5.0	1.0	1.0			0.0556	5.936455508129409E-4	5.936455508129409E-4
+7.0	1.0	1.0			0.047	5.254759747124506E-4	5.254759747124506E-4
+9.0	1.0	1.0			0.0397	4.578427350084306E-4	4.578427350084306E-4
+11.0	1.0	1.0			0.0327	4.2003910532234967E-4	4.2003910532234967E-4
+13.0	1.0	1.0			0.0271	3.6959472398831667E-4	3.6959472398831667E-4
+15.0	1.0	1.0			0.0233	3.6321105434719363E-4	3.6321105434719363E-4
+17.0	1.0	1.0			0.0203	3.4270344322752286E-4	3.4270344322752286E-4
+20.0	2.0	2.0			0.0164	2.348122654377322E-4	2.348122654377322E-4
+24.0	2.0	2.0			0.0124	2.1333766662265713E-4	2.1333766662265713E-4
+28.0	2.0	2.0			0.00981	1.9348344347773017E-4	1.9348344347773017E-4
+32.0	2.0	2.0			0.0079	1.6381788669128902E-4	1.6381788669128902E-4
+36.0	2.0	2.0			0.00634	1.4526764953010012E-4	1.4526764953010012E-4
+40.0	2.0	2.0			0.00509	1.2916971936177612E-4	1.2916971936177612E-4
+44.0	2.0	2.0			0.0044	1.1936900770300473E-4	1.1936900770300473E-4
+48.0	2.0	2.0			0.00355	1.0578761742283452E-4	1.0578761742283452E-4
+52.0	2.0	2.0			0.00299	9.925719218273303E-5	9.925719218273303E-5
+57.0	3.0	3.0			0.00265	8.011594722650417E-5	8.011594722650417E-5
+65.0	5.0	5.0			0.0018	5.122889809472775E-5	5.122889809472775E-5
+75.0	5.0	5.0			0.00112	4.181666653381161E-5	4.181666653381161E-5
+90.0	10.0	10.0			5.89E-4	2.0581315336974945E-5	2.0581315336974945E-5
+125.0	25.0	25.0			1.96E-4	8.210973145736136E-6	8.210973145736136E-6
+175.0	25.0	25.0			5.05E-5	3.831682300243589E-6	3.831682300243589E-6
+250.0	50.0	50.0			9.12E-6	1.0744970201913081E-6	1.0744970201913081E-6
+550.0	250.0	250.0			1.45E-7	5.437886652919496E-8	5.437886652919496E-8
+# END YODA_SCATTER2D 
