@@ -1,12 +1,0 @@
-# CMS_2014_I1298810.lo - a libtool object file
-# Generated by libtool (GNU libtool) 2.4.2 Debian-2.4.2-1.2ubuntu1
-#
-# Please DO NOT delete this file!
-# It is necessary for linking the library.
-
-# Name of the PIC object.
-pic_object='.libs/CMS_2014_I1298810.o'
-
-# Name of the non-PIC object
-non_pic_object=none
-
