@@ -109,7 +109,8 @@ RivetATLASAnalyses_la_SOURCES = \
     ATLAS_2014_I1307756.cc \
     ATLAS_2014_I1306294.cc \
     ATLAS_2014_I1315949.cc \
-    ATLAS_2014_I1325553.cc
+    ATLAS_2014_I1325553.cc \
+    ATLAS_2014_I1300647.cc
 if ENABLE_PRELIMINARY
 RivetATLASAnalyses_la_SOURCES += \
     ATLAS_2012_CONF_2012_001.cc
