@@ -2,6 +2,8 @@
 
 	* Add ATLAS dijet analysis (ATLAS_2014_I1325553).
 
+	* Add ATLAS Zpt analysis (ATLAS_2014_I1300647).
+
 2015-03-18  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding CMS_2014_I1298810 and CMS_2014_I1303894 analyses.
